# echoshader

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: dependabot.yml  pypi.yaml  pytest.yaml
docs/source/version_0.1.0/: develop_region_browser.ipynb  get_moored_data.ipynb  get_ship_data.ipynb  hist_examples.ipynb  region_browser.ipynb  sample_hake_regions.csv  track_examples.ipynb
echoshader/: __init__.py  _echoshader_version.py  core.py  curtain.py  echogram.py  geoplot_core.py  hist.py  map.py  region_browser.py
echoshader/plots/: echogram.py  geo_grid_plot.py
echoshader/tests/: test.py  test_plots.py
